@@ -268,11 +268,15 @@ public class HelpViewer extends JFrame implements EBComponent
 			if(pmsg.getWhat() == PluginUpdate.LOADED
 				|| pmsg.getWhat() == PluginUpdate.UNLOADED)
 			{
+				if(pmsg.isExiting())
+				{
+					// we don't care
+				}
+
 				if(!queuedTOCReload)
 					queueTOCReload();
 				queuedTOCReload = true;
 			}
-			SwingUtilities.updateComponentTreeUI(getRootPane());
 		}
 	} //}}}
 
